# coslab-core

./: .gitattributes  .gitignore  README.md  analysis_anton.py  analysis_anton_gensim.py  analysis_matti.py  aws.py  azure_vision.py  azurecomputervision.py  common.py  config.ini  database.py  embeddings.py  glove_embedding.py  glove_test_anton.py  googlecloud.py  output.py  pyproject.toml  pytest.ini  requirements.txt  results.db  secrets.yaml.example  setup.py  summary.pptx
.github/workflows/: pypi.yaml
keys/: anton_accessKeys.csv  my-gkey.json
results/: awsrekognition_detect_labels.csv  azurecomputervision_detect_labels.csv  googlecloud_detect_labels.csv
src/coslab/: aws.py  azure_vision.py  clarify.py  common.py  googlecloud.py  tag_comparator.py  taggerresults.py
src/imagetaggers/: aws.py  azure_vision.py  clarify.py  common.py  googlecloud.py  output.py  run.py  tag_comparator.py  taggerresults.py
tests/: test_tag_comparator.py
trained_vectordata/glove.twitter.27B/: glove.twitter.27B.100d.vec
